tests/e2e/scenarios/negative/compile_duplicate_export.ks
// Expected phase: compile — duplicate export name (re-export collision).

export * from "./_fixtures/dup_export_a.ks"
export * from "./_fixtures/dup_export_b.ks"
